<resources>
    <string name="app_name">Movies Mate</string>
    <string name="tvLogin">Log in</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="btnLogin">Log in</string>
    <string name="tvOr">Or</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="tvRegister">Register</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="btnRegister">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>